--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -7,8 +7,8 @@ on:
     branches:
       - "*"
 env:
-  OPENSEARCH_DASHBOARDS_VERSION: 'main'
-  QUERY_INSIGHTS_BRANCH: 'main'
+  OPENSEARCH_DASHBOARDS_VERSION: '3.3'
+  QUERY_INSIGHTS_BRANCH: '3.3'
   GRADLE_VERSION: '7.6.1'
   CYPRESS_VIDEO: true
   CYPRESS_SCREENSHOT_ON_RUN_FAILURE: true
