retrigger ut tests
Signed-off-by: Lingxi Chen <lingxich@amazon.com>

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -54,6 +54,7 @@ jobs:
       - name: Bootstrap plugin/OpenSearch-Dashboards
         run: |
           cd OpenSearch-Dashboards/plugins/query-insights-dashboards
+          yarn cache clean --all
           yarn osd bootstrap
       - name: Run unit tests
         run: |
