--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "@babel/runtime-corejs3": "^7.22.9",
     "luxon": "^3.2.1",
     "object-hash": "^3.0.0",
-    "plotly.js-dist": "^2.34.0"
+    "plotly.js-dist": "^2.34.0",
+    "pbkdf2": "3.1.5",
+    "form-data": "4.0.4"
   },
   "resolutions": {
     "@types/react": "^16.9.8",
@@ -44,7 +46,7 @@
     "json5": "^2.2.3",
     "@babel/core": "^7.26.10",
     "@babel/traverse": "^7.20.12",
-    "@cypress/request": "^3.0.0",
+    "@cypress/request": "^3.0.9",
     "braces": "3.0.3",
     "micromatch": "4.0.8",
     "cross-spawn": "7.0.5",
@@ -52,7 +54,10 @@
     "glob-parent": "^6.0.0",
     "@babel/helpers": "^7.22.9",
     "@babel/runtime": "^7.22.9",
-    "@babel/runtime-corejs3": "^7.22.9"
+    "@babel/runtime-corejs3": "^7.22.9",
+    "pbkdf2": "3.1.5",
+    "form-data": "4.0.4",
+    "sha.js": "^2.4.12"
   },
   "devDependencies": {
     "@cypress/webpack-preprocessor": "^5.17.1",
